--- a/app/src/main/res/layout/activity_cam_x.xml
+++ b/app/src/main/res/layout/activity_cam_x.xml
@@ -6,4 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".CamXActivity">
 
+    <androidx.camera.view.PreviewView
+        android:id="@+id/preview_view_container"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"/>
+
+    <ImageButton
+        android:id="@+id/btnCameraCapture"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:scaleType="fitCenter"
+        android:background="@null"
+        android:elevation="2dp"
+        android:src="@android:drawable/ic_menu_camera"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="40dp"
+        android:contentDescription="@string/clickpicture" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
